--- a/week02/styles/box-model.css
+++ b/week02/styles/box-model.css
@@ -1,15 +1,30 @@
 .callout {
-	
+	max-width: 400px;
+    margin: 10px;
+    border: 1px;
+    padding: 10px;
+    background-color: rgb(20, 57, 158);
+    color: white;
 }
 
 .callout img {
-	
+	float: right;
+    margin: 5px;
+    border: 2px solid black;
+    padding: 2px;
+    background-color: lightgray;
+    width: 100px;
+    height: auto;
 }
 
 blockquote {
-	
+	margin: 0;
 }
 
 cite {
-	
+	display: block;
+    border-top: 1px dotted white;
+    padding-top: 3px;
+    text-align: right;
+    font-size: smaller;
 }
