--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,7 +12,7 @@ h1 {
     color:darkblue;
 }
 
-img{
+main img{
     width: 150px;
     height: auto;
     border: 1px solid black;
@@ -21,5 +21,30 @@ img{
 }
 
 p {
+    padding: 0px;
+}
+
+main{
+    max-width: 840px;
+}
+
+aside{
+    width: 20rem;
+    margin: 1rem;
+    border: 1px solid rgb(0 0 0 / 0.2);
     padding: 10px;
+    background-color: #eee;
+    color: #333;
+}
+
+aside img{
+    width: 200px;
+    height: auto;
+}
+
+footer{
+    margin-top: 1rem;
+    border-top: 2px solid;
+    text-align: center;
+    display: block;
 }
