--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,10 @@
+:root {
+    --main-blue: darkblue;
+    --main-border: black;
+}
+
 nav {
-    background-color: darkblue;
+    background-color: var(--main-blue);
     padding: 10px;
 }
 nav a {
@@ -9,13 +14,13 @@ nav a {
 }
 
 h1 {
-    color:darkblue;
+    color:var(--main-blue)
 }
 
 main img{
     width: 150px;
     height: auto;
-    border: 1px solid black;
+    border: 1px solid var(--main-border);
     padding: 2px;
     box-shadow: 0 0 30px gray;
 }
@@ -31,7 +36,7 @@ main{
 aside{
     width: 20rem;
     margin: 1rem;
-    border: 1px solid rgb(0 0 0 / 0.2);
+    border: 1px solid var(--main-border);
     padding: 10px;
     background-color: #eee;
     color: #333;
