--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 :root {
     --main-blue: darkblue;
     --main-border: black;
@@ -23,6 +29,8 @@ main img{
     border: 1px solid var(--main-border);
     padding: 2px;
     box-shadow: 0 0 30px gray;
+    float: right;
+    margin: 10px
 }
 
 p {
@@ -35,11 +43,7 @@ main{
 
 aside{
     width: 20rem;
-    margin: 1rem;
-    border: 1px solid var(--main-border);
-    padding: 10px;
-    background-color: #eee;
-    color: #333;
+    position:relative;
 }
 
 aside img{
@@ -47,9 +51,27 @@ aside img{
     height: auto;
 }
 
+aside h2{
+    position:absolute;
+    top: 13px;
+    left: 70px;
+    z-index: 100;
+    color: white;
+}
+
 footer{
     margin-top: 1rem;
     border-top: 2px solid;
     text-align: center;
     display: block;
+}
+
+/* Class Selectors */
+
+.box {
+    margin: 1rem;
+    border: 1px solid var(--main-border);
+    padding: 1rem;
+    background-color: #eee;
+    color: #333;
 }
