--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -41,7 +41,7 @@ nav, p, section, article {
     position:relative;
 }
 
-h1 {
+.hero h1 {
     position:absolute;
     top: 20px;
     width: 100%;
@@ -52,7 +52,7 @@ h1 {
     color: #fff
 }
 
-article {
+.hero article {
     position:absolute;
     bottom: 20px;
     right: 10px;
