--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,16 +11,24 @@
 
 nav {
     background-color: var(--main-blue);
-    padding: 10px;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 nav a {
+    display: block;
     color: white;
-    display:block;
-    padding: 20px;
+    padding: 0.5rem;
+    font-size: 1.2rem;
+    font-weight: 700;
+    text-decoration: none;
+    
 }
 
 h1 {
-    color:var(--main-blue)
+    color:var(--main-blue);
+    border-bottom: 2px solid #333 ;
 }
 
 main img{
@@ -37,13 +45,22 @@ p {
     padding: 0px;
 }
 
+.grid{
+    display: grid;
+    align-items: center;
+}
+
+
 main{
-    max-width: 840px;
+    grid-column: 2/3;
+    margin: 1rem;
 }
 
 aside{
     width: 20rem;
     position:relative;
+    grid-column: 1/2;
+    grid-row: 1/2;
 }
 
 aside img{
@@ -57,6 +74,12 @@ aside h2{
     left: 70px;
     z-index: 100;
     color: white;
+}
+
+header, .grid, footer {
+    max-width: 840px;
+    margin: 0 auto;
+
 }
 
 footer{
@@ -75,3 +98,4 @@ footer{
     background-color: #eee;
     color: #333;
 }
+
