dix for w03 submission

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -6,7 +6,7 @@
 
 :root {
     --primary-color: #1A1A1A;
-    --secondary-color: #007acc9d;
+    --secondary-color: #085181;
     --accent1-color: #2D2D2D;
     --accent2-color: #ffc038;
     --heading-font: "Times New Roman", "Georgia", serif;
