--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -23,6 +23,36 @@ header, main, footer {
     margin: 0 auto;
 }
 
+header {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-self: end;
+    align-items: center;
+    background-color: var(--primary-color);
+}
+
+.links {
+    display:flex;
+    flex-flow: row;
+    column-width: auto;
+    list-style: none;
+}
+
+.links li {
+    border: 1px solid black;
+    background-color: rgb(238, 236, 236);
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    white-space: nowrap;
+}
+
+.links a{
+    text-decoration: none;
+    white-space: nowrap;
+}
+
 h1, h2 {
     font-family: var(--heading-font);
     color: var(--primary-color)
@@ -32,6 +62,58 @@ nav, p, section, article {
     margin: 16px;
     padding: 8px;
 }
+
+.history {
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+    align-items: center;
+    margin: 20px;
+    border: 1px solid black;
+    padding: 10px;
+}
+
+.history h2 {
+    grid-column: 1 / -1;
+    justify-self: center;
+    margin-bottom: 20px;
+}
+
+.history img {
+    width: 200px;
+    height: auto;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.history p{
+    margin: 0px;
+}
+
+.adventure {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    align-items: center;
+    max-width: 800px;
+    border: 1px solid black;
+    text-align: center;
+}
+
+.adventure h2 {
+    display: grid;
+    grid-column: 1 / -1;
+    justify-self: center;
+    margin-bottom: 20px;
+}
+
+.adventure figure {
+    display: grid;
+    
+}
+.adventure img {
+    width: 150px;
+    height: auto;
+}
+
 
 .socialmedia a{
     text-decoration: none;
@@ -70,4 +152,28 @@ nav, p, section, article {
 .hero article img {
     float: right;
     width: 125px;
+}
+
+footer {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    align-items: center;
+    border: 1px solid black;
+    background-color: var(--primary-color);
+    
+}
+
+footer p{
+    grid-column: 2;
+    text-align: center;
+    color: #fff;
+}
+footer nav{
+    display: flex;
+    justify-content: end;
+    gap: 1rem;
+}
+
+footer img {
+    width: 50px;
 }
