--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -266,3 +266,16 @@ textarea{
     height: 300px;
     margin: 1rem;
 }
+
+/* To eliminate fieldset interference with the grid */
+fieldset {
+    border: none;
+    padding: 0;
+    margin: 0;
+    min-inline-size: 0; 
+}
+
+fieldset.fullspan {
+    grid-column: span 2;
+    display: contents;
+}
